Fix dark mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -128,3 +128,9 @@ ul.link li + li {
 :root {
   --L-text: 20%;
 }
+
+@media screen and (prefers-color-scheme: dark) {
+  :root {
+     --clr-text: #e9e9e9
+  }
+}
